@@ -11,6 +11,7 @@ IO/JCMT.pm
 IO/Cluster.pm
 IO/Simple.pm
 IO/TST.pm
+IO/VOTable.pm
 IO/Makefile.PL
 Query/Query.pm
 Query/Makefile.PL
@@ -34,6 +35,7 @@ t/2_simple.t
 t/2_jcmt.t
 t/2_jcmt_loose.t
 t/2_tst.t
+t/2_votable.t
 t/3_catalog.t
 t/3_star.t
 t/4_gsc.t
@@ -45,4 +47,3 @@ t/4_skycat_supercos.t
 etc/README
 etc/sss.cfg
 etc/skycat.cfg
-META.yml                                Module meta-data (added by MakeMaker)
